--- a/otp_counter.html
+++ b/otp_counter.html
@@ -34,11 +34,12 @@
             }
         }
         setQueryParams();
+
         console.log(params, "Params received");
         const messageSpan = document.getElementById('otp_message');
         const timerSpan = document.getElementById('otp_timer');
         let seconds = params.seconds;
-        messageSpan.innerHTML = params.message;
+        messageSpan.innerHTML = decodeURIComponent(params.message);
         timerSpan.innerHTML = seconds + ' seconds';
         let intervalId;
 
