--- a/otp_counter.html
+++ b/otp_counter.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div style="text-align: center;">
+    <div>
         <span id="combined">
             <span id="otp_message"></span>
             <span id="otp_timer"></span>
