--- a/otp_counter.html
+++ b/otp_counter.html
@@ -40,7 +40,7 @@
         const timerSpan = document.getElementById('otp_timer');
         let seconds = params.seconds;
         messageSpan.innerHTML = decodeURIComponent(params.message);
-        timerSpan.innerHTML = 'Your OTP will expire in <strong>' + seconds + ' seconds</strong>';
+        timerSpan.innerHTML = 'Your OTP will expire in <strong>' + seconds + '</strong> seconds.';
         let intervalId;
 
         function decreaseTimer() {
@@ -51,7 +51,7 @@
                 timerSpan.innerHTML = '';
             }
             else {
-                timerSpan.innerHTML = 'Your OTP will expire in <strong>' + seconds + ' seconds</strong>';
+                timerSpan.innerHTML = 'Your OTP will expire in <strong>' + seconds + '</strong> seconds.';
             }
         }
         intervalId = setInterval(decreaseTimer, 1000);
