--- a/otp_counter.html
+++ b/otp_counter.html
@@ -63,7 +63,7 @@
             //     event_code: 'ym-client-event',
             //     data: document.getElementById('otp_input').value
             // }), '*');
-            window.YellowMessengerPlugin.sendEvent(document.getElementById('otp_input'));
+            window.parent.sendEvent(document.getElementById('otp_input'));
         }
 
     </script>
