--- a/loginsuccess.html
+++ b/loginsuccess.html
@@ -50,14 +50,14 @@
         }
 
         #message {
-            margin-top: -.5em;
+            margin-top: -1em;
             color: #757575;
             letter-spacing: 1px;
         }
 
         #contBtn {
             position: relative;
-            top: 1.5em;
+            top: 1em;
             text-decoration: none;
             background: #8bc34a;
             color: #fff;
@@ -88,11 +88,11 @@
 <body>
     <div id='card' class="animated fadeIn">
         <div id='upper-side'>
-            <img src="https://cdn.yellowmessenger.com/SJVqH7ntIWYH1628834875624.png" height="150" width="150"
+            <img src="https://cdn.yellowmessenger.com/SJVqH7ntIWYH1628834875624.png" height="25" width="25"
                 alt="Success" />
-            <h3 id='status'>
+            <h5 id='status'>
                 Success
-            </h3>
+            </h5>
         </div>
         <div id='lower-side'>
             <p id='message'>
