Styling changes OTP

--- a/otp_counter.html
+++ b/otp_counter.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Counter</title>
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Raleway:200');
+        /* @import url('https://fonts.googleapis.com/css?family=Raleway:200'); */
 
         body,
         html {
@@ -61,12 +61,25 @@
         }
 
         .buttonsDiv button {
-            padding: 10px;
+            padding: 15px;
             font-size: 17px;
             border-radius: 10px;
             outline: none;
+            width: 125px;
             border: none;
             cursor: pointer;
+            box-shadow:
+                0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+                0 6.7px 5.3px rgba(0, 0, 0, 0.028),
+                0 12.5px 10px rgba(0, 0, 0, 0.035),
+                0 22.3px 17.9px rgba(0, 0, 0, 0.042),
+                0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+                0 100px 80px rgba(0, 0, 0, 0.07);
+
+        }
+
+        .buttonsDiv button:active {
+            box-shadow: none;
         }
 
         #timer_message {
@@ -114,7 +127,7 @@
         </div>
         <div class="buttonsDiv">
             <button onclick="resendOtp()" id="otp_resend" disabled>Resend</button>
-            <button onclick="submitOtp()" id="otp_submit">Submit</button>
+            <button onclick="submitOtp()" id="otp_submit" disabled>Submit</button>
         </div>
         <div id="timer_message">
             Your OTP will expire in the next
@@ -225,6 +238,10 @@
                 data: otp
             }), '*');
         }
+
+        window.addEventListener("load", function () {
+            $('#digit-1').select();
+        }, false);
 
     </script>
 </body>
