Added cross origin message communication

--- a/otp_counter.html
+++ b/otp_counter.html
@@ -279,6 +279,12 @@
         }
 
         window.addEventListener("load", initiate, false);
+        window.addEventListener("message", function (event) {
+            console.log(event.data, "Event data");
+            if (event.data.value === 'otp_validated') {
+                otpAccepted();
+            }
+        });
 
     </script>
 </body>
