--- a/otp_counter.html
+++ b/otp_counter.html
@@ -159,6 +159,7 @@
                 else {
                     $('#otp_submit').attr('disabled', true);
                 }
+                console.log(e, "Input event");
 
                 var parent = $($(this).parent());
 
