Changed font style

--- a/otp_counter.html
+++ b/otp_counter.html
@@ -14,6 +14,7 @@
             width: 100%;
             margin: 0;
             /* font-family: 'Raleway', sans-serif; */
+            font-family: “botplatform-font”, “Helvetica Neue”, Helvetica, Arial, sans-serif;
             font-weight: 200;
         }
 
@@ -46,7 +47,7 @@
             line-height: 50px;
             text-align: center;
             font-size: 24px;
-            font-family: 'Raleway', sans-serif;
+            font-family: “botplatform-font”, “Helvetica Neue”, Helvetica, Arial, sans-serif;
             font-weight: bold;
             color: white;
             margin: 0 2px;
@@ -108,7 +109,7 @@
             line-height: 50px;
             text-align: center;
             font-size: 24px;
-            font-family: 'Raleway', sans-serif;
+            font-family: “botplatform-font”, “Helvetica Neue”, Helvetica, Arial, sans-serif;
             font-weight: bold;
             color: black;
             margin: 0 2px;
