--- a/otp_counter.html
+++ b/otp_counter.html
@@ -51,6 +51,7 @@
             font-weight: bold;
             color: white;
             margin: 0 2px;
+            border-radius: 50%;
         }
 
         .digit-group .splitter {
