--- a/otp_counter.html
+++ b/otp_counter.html
@@ -40,13 +40,16 @@
         }
 
         .digit-group input {
+            /* width: 30px;
+            height: 50px; */
             width: 30px;
-            height: 50px;
+            height: 30px;
             background-color: #4238B8;
             border: none;
             line-height: 50px;
             text-align: center;
-            font-size: 24px;
+            /* font-size: 24px; */
+            font-size: 20px;
             font-family: “botplatform-font”, “Helvetica Neue”, Helvetica, Arial, sans-serif;
             font-weight: bold;
             color: white;
