--- a/slider.html
+++ b/slider.html
@@ -13,6 +13,7 @@
             margin: 0;
             font-family: “botplatform-font”, “Helvetica Neue”, Helvetica, Arial, sans-serif;
             font-weight: 200;
+            background-color: white;
         }
 
         body {
