--- a/slider.html
+++ b/slider.html
@@ -201,14 +201,24 @@
 
         function changeValue(e) {
             document.querySelector('.slider_output').innerHTML = document.getElementById('range_picker').value;
-            const rangeInput = document.getElementById("range_picker")
-                , n = 30;
-            Number(rangeInput.value) === Number(rangeInput.max) ? n = -8 : Number(rangeInput.value) == Number(rangeInput.max) / 2 ? n = 0 : Number(rangeInput.value) >= Number(rangeInput.max) / 2 && (n = 10);
-            var i = Number(100 * (rangeInput.value - rangeInput.min) / (rangeInput.max - rangeInput.min))
-                , o = n - .2 * i;
-            document.querySelector('.slider_value_span').style.left = "calc(".concat(i, "% + (").concat(o, "px))");
+            const rangeInput = document.getElementById("range_picker");
+            let n = 30;
+            const { value, min, max } = rangeInput;
+            // Number(rangeInput.value) === Number(rangeInput.max) ? n = -8 : Number(rangeInput.value) == Number(rangeInput.max) / 2 ? n = 0 : Number(rangeInput.value) >= Number(rangeInput.max) / 2 && (n = 10);
+            if (value === max) {
+                n = -8;
+            }
+            else if (value == max / 2) {
+                n = 0;
+            }
+            else if (value >= max / 2) {
+                n = 10;
+            }
+            const valuePercent = 100 * (value - min) / (max - min);
+            const o = n - .2 * valuePercent;
+            document.querySelector('.slider_value_span').style.left = "calc(".concat(valuePercent, "% + (").concat(o, "px))");
             var a = '#4a90e2';
-            rangeInput.style.background = "linear-gradient(to right, ".concat(a, " 0%, ").concat(a, " ").concat((rangeInput.value - rangeInput.min) / (rangeInput.max - rangeInput.min) * 100, "%, #DEE2E6 ").concat((rangeInput.value - rangeInput.min) / (rangeInput.max - rangeInput.min) * 100, "%, #DEE2E6 100%)")
+            rangeInput.style.background = "linear-gradient(to right, ".concat(a, " 0%, ").concat(a, " ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 100%)")
         }
 
         function submit() {
