--- a/slider.html
+++ b/slider.html
@@ -39,7 +39,7 @@
             color: #000000;
             position: absolute;
             /* bottom: 110px; */
-            left: 20px;
+            left: 5%;
 
         }
 
@@ -52,7 +52,7 @@
             color: #000000;
             position: absolute;
             /* bottom: 110px; */
-            right: 20px;
+            right: 5%;
         }
 
         .sliderLabel {
@@ -136,7 +136,7 @@
             -webkit-appearance: none;
             appearance: none;
             height: 13px !important;
-            width: 95%;
+            width: 90%;
             border-radius: 10em;
             background-color: #DBE2EB;
             outline: none;
@@ -153,6 +153,10 @@
             border-radius: 5px;
             font-size: 14px;
             cursor: pointer;
+        }
+
+        .slider_value_span {
+            left: 50px;
         }
     </style>
 </head>
